--- a/MainProject/MVPv5/MVPv5.Client/Pages/Login.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Login.razor
@@ -47,6 +47,9 @@
         var response = await httpClient.PostAsJsonAsync("User/check", loginedUser);
 
         // получить ID и передавать его между страницами?
+        // да, передавать логин и пароль через запрос (не показывается в URL?)
+        // таким образом при каждом заходе на страницы будут подтягиваться данные о пользователе
+        // в идеале сделать через Куки, но мы Маслята, не забываем ;)
 
         if (response.IsSuccessStatusCode)
         {
