login to uri; adding text areas by dictionary

--- a/MainProject/MVPv5/MVPv5.Client/Layout/UpperPanel.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Layout/UpperPanel.razor
@@ -5,7 +5,9 @@
 @if (IsPanelVisible)
 {
     <div class="upper-panel">
-        <!-- Передаем параметр OnSave дальше в PanelElements -->
+        <!-- Передаем параметр 
+
+        дальше в PanelElements -->
         <PanelElements OnSave="OnSave" />
     </div>
 }
